@@ -1,3 +1,4 @@
+Jul 31 2002  2.5.1  Made packetsignatures.h bsd-friendly (Dave Worth)
 Jul 30 2002  2.5.1  Started 2.5.1 development tree
 
 Jul 30 2002  2.4.5  Dropped 2.4.5 release from current development code.  
